--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,9 @@
     <body>
         <h1>Hello world!</h1>
         <p>We can build a full webpage here</p>
-        <form>
+        <form method="post" action="/results">
             <input type="text" name="nickname" placeholder="Enter your nickname"/>
+            <input type="text" name="breakfast" placeholder="Enter your breakfast"/>
             <input type="submit" value="Submit"/>
         </form>
     </body>
